--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 
-# Ne réécrivez pas si l'URL commence par /public/
+# Do not rewrite if the URL starts with /public/
 RewriteCond %{REQUEST_URI} !^/public/
 
-# Réécrivez toutes les autres requêtes pour les rediriger vers public/index.php
+# Rewrite all other requests to redirect them to public/index.php
 RewriteRule ^(.*)$ public/index.php?url=$1 [QSA,L]
